--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,15 +11,15 @@ actix-files = { version = "0.6", optional = true }
 actix-web = { version = "4", optional = true, features = ["macros"] }
 console_error_panic_hook = "0.1"
 http = { version = "1.0.0", optional = true }
-leptos = { version = "0.6" }
-leptos_meta = { version = "0.6" }
-leptos_actix = { version = "0.6", optional = true }
-leptos_router = { version = "0.6" }
+leptos = { version = "0.7" }
+leptos_meta = { version = "0.7" }
+leptos_actix = { version = "0.7", optional = true }
+leptos_router = { version = "0.7" }
 wasm-bindgen = "=0.2.95"
 
 [features]
-csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
-hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
+csr = ["leptos/csr"]
+hydrate = ["leptos/hydrate"]
 ssr = [
   "dep:actix-files",
   "dep:actix-web",
