--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ leptos_router = { version = "0.7" }
 wasm-bindgen = "=0.2.95"
 
 [features]
+default=["ssr"]
 csr = ["leptos/csr"]
 hydrate = ["leptos/hydrate"]
 ssr = [
